2007-05-24  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  When a component not known to the manager logs in, make sure we call
	  all the appropriate functions to rebuild the entire depgraph
	  correctly, not just fragments of it.
	  Fixes #574.

2007-05-24  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_common_messages.py:
	  Actually port a test to twisted 2 that was never ported.
	* flumotion/twisted/integration.py:
	  Another 1.3 compat chunk.

2007-05-24  Michael Smith <msmith@fluendo.com>

	* flumotion/test/common.py:
	* flumotion/test/test_dialogs.py:
	* flumotion/test/test_http.py:
	* flumotion/test/test_manager_manager.py:
	* flumotion/test/test_twisted_integration.py:
	  Remove more 1.3 compatibility code.

2007-05-24  Michael Smith <msmith@fluendo.com>

	* flumotion/twisted/Makefile.am:
	* flumotion/twisted/compat.py:
	  Restore minimal compat module; needed so that admins can work with
	  old managers/components.

2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/ipbouncer.py
	(IPBouncer.do_authenticate): Accept challenge-response keycards,
	as they also support the address attribute.

	* flumotion/twisted/portal.py (BouncerPortal.login): Reset
	keycard.address if it is there.

	* flumotion/common/config.py (buildEatersDict): Document.
	(buildPropertyDict): Document.
	(buildPlugsSet): Document.

2007-05-23  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_component.py:
	  Rewrite this test in a twisted-2.0 compatible way.

2007-05-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/wizard/steps.py (Vorbis.worker_changed): Remove print.

	* flumotion/worker/job.py (JobAvatar.setMind.error): Fix debug
	statement which triggered tracebacks in error paths.

2007-05-23  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_defer.py:
	* flumotion/test/test_pb.py:
	  Remove deprecated uses of reactor.iterate() which aren't needed.
	  There are some remaining.
